--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,14 @@ main {
 
 .robo {
     height: 110%;
-    z-index: 1;
+    z-index: 0;
     position: absolute;
     left: -20%;
     top: -5%;
+}
+
+[data-view="top"] {
+    z-index: 1;
 }
 
 .titulo {
@@ -66,6 +70,21 @@ main {
 }
 
 /****************************** Equipamentos *****/
+
+.change-color {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 44px;
+    border-radius: 50%;
+    color: var(--main-cinza);
+    font-size: 4em;
+    background: var(--main-preto);
+    text-align: center;
+    border: 3px solid var(--main-cinza);
+    cursor: pointer;
+    z-index: 2;  
+}
 
 .equipamentos {
     flex-basis: 32%;
